Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8368365

ASAN errors should produce hs-err files and core dumps

XMLWordPrintable

      ASAN errors would be a lot more useful if they came with hs-err files. ASAN allows user callbacks into error report generation. We should use this in order to get both ASAN error reports and hs-err files+core dumps.

      Note:

      After this patch, the JVM will always produce hs-err files when an ASAN-report happens. It will *only* produce core files if ASAN_OPTIONS `disable_coredump=0` and `abort_on_error=1` and the JVM option `CreateCoredumpOnCrash` had not been disabled (and the limit for core file size is high enough etc, all the usual restrictions on OS level still apply).

      This means that - by default - ASAN builds will *not* generate cores, since ASAN default options inhibit that by setting `disable_coredump=1` and `abort_on_error=0`;


            stuefe Thomas Stuefe
            stuefe Thomas Stuefe
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated: