8368365: ASAN errors should produce hs-err files and core dumps

Reviewed-by: mbaesken, asmehra